--- a/netlify.toml
+++ b/netlify.toml
@@ -12,13 +12,7 @@
   status = 200
 
 [[redirects]]
-  from = "/admin/tips/*/edit"
-  to = "/admin/tips/:splat/edit"
-  status = 200!
-  conditions = {Language = ["en"], Country = ["US"], Role = ["admin"]}
-
-[[redirects]]
   from = "/admin/tips/*"
   to = "/admin/tips/:splat"
-  status = 200!
+  status = 200
   conditions = {Language = ["en"], Country = ["US"], Role = ["admin"]}
