All the thingz 😬

--- a/.env.defaults
+++ b/.env.defaults
@@ -3,4 +3,7 @@
 # system. Any custom values should go in .env and .env should *not* be checked
 # into version control.
 
+# Set to `false` to skip authentication when going to /admin
+USE_AUTHENTICATION=false
+
 DB_HOST=file:./dev.db
