--- a/web/package.json
+++ b/web/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@redwoodjs/web": "^0.1.0",
     "@redwoodjs/router": "^0.1.0",
+    "netlify-identity-widget": "^1.5.5",
     "prop-types": "^15.7.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0"
